--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: MetaTube
-description: Just Another Video Tube Plugin for Jellyfin/Emby.
+description: Metadata Tube Plugin for Jellyfin/Emby.
 
 url: https://github.com/metatube-community/jellyfin-plugin-metatube
 repo: https://github.com/metatube-community/jellyfin-plugin-metatube
