--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,5 +12,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: |
+        git config --global user.name  'metatube-bot'
+        git config --global user.email 'metatube-bot@users.noreply.github.com'
       - run: pip install mkdocs-material mkdocs-minify-plugin jieba
       - run: mkdocs gh-deploy --force
