--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           python-version: 3.x
       - run: |
-          git config --global user.name  'metatube-bot'
-          git config --global user.email 'metatube-bot@users.noreply.github.com'
+          git config --global user.name  'github-actions[bot]'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
       - run: pip install mkdocs-material mkdocs-minify-plugin jieba
       - env:
           CLOUDFLARE_ANALYTICS_KEY: ${{ secrets.CLOUDFLARE_ANALYTICS_KEY }}
